# field_propagation

./: .cproject  .gitignore  .project  BulirschStoerDenseDriver.cc  CMakeCache.txt  CMakeLists.txt  ChordFinder.hh  G4PropagatorInField.cc  Makefile  README  README.md  README_BOOST.txt  bulirsch_stoer.hpp  changeFile.txt  cmake_install.cmake  contributors.txt  controlled_runge_kutta.hpp  groups  plot.py  project.config  readme.md  rewrite_source.sh  validation.txt
benchmarks/: CMakeLists.txt  History  README  upd-dr.2014-05-26
benchmarks/.svn/: entries
benchmarks/calorimeter/.svn/: entries
benchmarks/calorimeter/FullCMS/: GNUmakefile  History  README  bench1_100.g4  bench1_1k.g4  bench1_500.g4  bench1_5k.g4  full_cms.cc
benchmarks/calorimeter/FullCMS/.svn/: entries
benchmarks/calorimeter/FullCMS/src/: MyDetectorConstruction.cc  MyEventAction.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc
benchmarks/calorimeter/HadCalCMS/: GNUmakefile  bench1.g4  bench2.g4  mainHadCalo.cc  run1.g4  run1_100.g4  run1_1k.g4  run1_500.g4  run1_5k.g4  run2.g4  run2_100.g4  run2_1k.g4  run2_500.g4  run3.g4  run3_1k.g4  run3_500.g4  run3_5k.g4
benchmarks/calorimeter/ParFullCMS/: History  README  bench1.g4  bench2.g4  bench3.g4  memoryProf.g4  user.properties  vis.mac
benchmarks/electromagnetic/: README.txt  cpu_result.txt  g4benchmarks.cmake  g4macros.cmake  production.csh
benchmarks/electromagnetic/.svn/: entries
benchmarks/electromagnetic/be1/: CMakeLists_cTest.txt  GNUmakefile  be1.cc  cms10gev_emv.mac  igprof.mac  run.csh
benchmarks/electromagnetic/be1/.svn/: entries
benchmarks/electromagnetic/be2/: CMakeLists.txt  GNUmakefile  History  atlasbar.mac  atlasbar_emv_20um.mac  be2.cc  run.csh
benchmarks/transportation/.svn/: entries
benchmarks/transportation/NTST/: GNUmakefile  History  Makefile  README-testNTST  back.txt  bench1.g4  callgrind.out.22940  callgrind.out.26651  callgrind.out.26764  callgrind.out.27041  callgrind.out.27106  data2_13.out  data2_3.out  data2_4.out  data2_8.out  data3_8.out  data_13.out  data_3.out  data_4.out  data_8.out  loglog.mac  loglog.sh  loglog_sandro.sh  newdata_13.out  newdata_3.out  newdata_4.out  newdata_8.out  plot.py  run2a.mac  run2c.mac  run2xa.mac  run2xc.mac  runall2xc.mac  testNTST.cc  verbos_3_NTST.txt  verobse3loopvec.txt
benchmarks/transportation/honeycomb/: BuildBoxWorld.hh  BuildCalorimeter.hh  GNUmakefile  History  Shoot.hh  calorimeter.cc  replicaCal.cc  shooter.cc
magneticfield/src/: .G4CachedMagneticField.cc.swp  .G4ClassicalRK4.cc.swp  .G4EqMagElectricField.cc.swp  .G4EquationOfMotion.cc.swp  ARK4.cc  BSChordFinder.cc  BSStepper.cc  BaseDriver.cc  BogackiShampine23.cc  BogackiShampine23modified.cc  BogackiShampine45.cc  BulirschStoer.cc  BulirschStoerDenceDriver.cc  BulirschStoerDenseDriver.cc  BulirschStoerDenseOut.cc  BulirschStoerDriver.cc  CMakeLists.txt  ChawlaSharmaRKNstepper.cc  ChawlaSharmaRKNstepperFullRenormalization.cc  ChawlaSharmaRKNstepper_with_renormalization.cc  ChawlaSharmaWrapper.cc  DoLoMcPriRK34.cc  DormandPrince745.cc  DormandPrinceRK56.cc  DormandPrinceRK78.cc  ErrorComputer.cc  FBogackiShampine23.cc  FBogackiShampine45.cc  FDoLoMcPriRK34.cc  FDormandPrince745.cc  FDormandPrinceRK56.cc  FSALIntegratorDriver.cc  FSALMagIntegratorDriver.cc  FSALMagIntegratorStepper.cc  FTsitourasRK45.cc  FVernerRK56.cc  FineRKNG34.cc  FineRKNG45.cc  G4BSChordFinder.cc  G4BogackiShampine23.cc  (+101 more)
magneticfield/src/backup/: TCashKarpRKF45.cc  TMagFieldEquation.cc
magneticfield/test/NTST/: CMakeLists.txt  GNUmakefile  History  README  run2a.mac  run2b.mac  run2c.mac  run2xa.mac  run2xb.mac  run2xc.mac  testNTST.cc
test/Comparator/: CMakeLists.txt  cmsmagfield2015.txt  main.cc  plot.py  plot1d.py  plot3d.py
test/Comparator/include/: CMSMagneticField.hh  ChordFinder.hh  Comparator.hh  Comparator.icc  DriverUtils.hh  GustafssonDriver.hh  GustafssonDriver.icc  StandardDriver.hh  StandardDriver.icc
test/Comparator/src/: CMSMagneticField.cc  ChordFinder.cc  Comparator.cc  DriverUtils.cc  GustafssonDriver.cc  StandardDriver.cc
test/RKTest/: CMakeLists.txt  RKTestRun.cc  Readme.txt  sources.cmake
test/RKTest/include/: RKTest.hh  RKTestDriver.hh  RKTestField.hh  RKTestTrack.hh
test/RKTest/src/: RKTest.cc  RKTestDriver.cc  RKTestField.cc  RKTestTrack.cc
test/benchNTST/: CMakeLists.txt  README-CPU  bench2.g4  bench3.g4  run2a.mac  run2b.mac  run2c.mac  run2d.mac  run2xa.mac  run2xb.mac  run2xc.mac  runall2c.mac  testNTST.cc
test/benchNTST/include/: NTSTDetectorConstruction.hh  NTSTDetectorMessenger.hh  NTSTFieldSetup.hh  NTSTGunGenerator.hh  NTSTGunMessenger.hh  NTSTLooperDeath.hh  NTSTPhysicsList.hh  NTSTPhysicsListMessenger.hh  NTSTPrimaryGeneratorMessenger.hh  NTSTSteppingAction.hh  NTSTTabulatedField3d.hh
test/benchNTST/src/: NTSTBabarEvtReadGenerator.cc  NTSTDetectorConstruction.cc  NTSTEventAction.cc  NTSTEventActionMessenger.cc  NTSTFieldSetup.cc  NTSTGradientField.cc  NTSTGunGenerator.cc  NTSTGunMessenger.cc  NTSTPrimaryGeneratorMessenger.cc  NTSTRotationMatrix.cc
test/compareByTime/: CMakeLists.txt  Makefile  cmake_install.cmake  compareByTime.cc
test/comparePairByTime/: CMakeLists.txt  Makefile  cmake_install.cmake  comparePairByTime.cc
test/interpolate/: CMakeLists.txt  interpolate.cc
test/interpolation_error/: CMakeLists.txt  interpolation_error.cc
test/testSteppers/: CMakeLists.txt  Create_dats.py  Makefile  Readme.txt  cmake_install.cmake  modifiedtestH.cc  plot.p  testDriver_funcEvals.cc  testH.cc  testInt_Driver.cc  testInterpol.cc  testInterpol_action.cc  testInterpol_action_theta.cc
test/testTemplated/: CMakeLists.txt  Makefile  callgrind.out.29407  callgrind.out.30758  callgrind.out.31686  callgrind.out.TemplateRKF45  callgrind.out.template_without_vec  cmake_install.cmake  makeit.sh  maketest.sh  testPropagateMagField.cc  testPropagateMagField.cc.bak  vectorize140.txt  vectorizedloops.txt  verbose=3.txt
test/testTemplated/callgraph/: callgrind.out.Tcashkarp
test/testTemplated/test_functionality/: callgrind.out.4304  diffRK4.newout  maketest.sh  test.sh  testPropagateMagField.cc
(+962 files in other folders)
